platform-v2/keycloack-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloack-system
  labels:
    linkerd.io/inject: enabled
